checkout styling complete

--- a/styles/style.css
+++ b/styles/style.css
@@ -163,7 +163,7 @@ html, body{
     border: solid 2px var(--clr-gold);
     border-radius: 4px;
     background-color: var(--clr-background);
-    position: absolute;
+    position: fixed;
     margin: auto;
     left: 0;
     right: 0;
@@ -193,7 +193,7 @@ html, body{
     font-size: 1.5rem;
 }
 
-.quantity-modal button{
+.increase, .decrease{
     background-color: transparent;
     color: var(--clr-gold);
     border: none;
@@ -208,6 +208,23 @@ html, body{
 
 .increase:active, .decrease:active{
     font-size: 1.5rem;
+}
+
+.order-confirm-btn{
+    background-color: transparent;
+    font-size: 1.1rem;
+    padding: 5px 24px;
+    margin-top: 4px;
+    color: var(--clr-gold);;
+    border-color: var(--clr-gold);;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.order-confirm-btn:hover{
+    background-color: var(--clr-gold);
+    color: white;
+    transition: 0.4s;
 }
 
 
