--- a/styles/checkout.css
+++ b/styles/checkout.css
@@ -2,6 +2,7 @@
 
 :root{
     --clr-gold: rgb(197, 157, 95);
+    --clr-gold-focus: rgb(141, 112, 67);
     --clr-background: hsl(210, 36%, 96%);
     --clr-titles: color: hsl(209, 61%, 16%);;
 }
@@ -16,21 +17,24 @@ html, body{
 
 .container{
     border: solid 2px black;
+    border-radius: 4px;
     width: 40%;
     margin: 4rem auto;
+    letter-spacing: 2px;
 }
 
 .order-items{
     flex-direction: row;
-    height: 6rem;
     margin: 1rem 2rem;
     display: flex;
     box-shadow: 0px 3px 5px rgba(197, 157, 95, 0.3);
+    letter-spacing: 4px;
 }
 
 .order-items img{
     object-fit: cover;
-    width: 140px;
+    width: 150px;
+    height: 100px;
     border: solid 4px var(--clr-gold);
     border-radius: 4px ;
 }
@@ -38,7 +42,6 @@ html, body{
 .item-info{
     width: 100%;
     padding-left: 1rem;
-    letter-spacing: 4px;
     color: var(--clr-titles);  
 }
 
@@ -65,4 +68,40 @@ html, body{
     color: var(--clr-gold);
     font-weight: 600;
     font-size: 1.1rem;
+}
+
+.order-checkout{
+    padding: 1rem 2rem;
+}
+
+.order-checkout p {
+    color: var(--clr-titles);
+    margin: 1rem 0;
+    font-size: 1.2rem;
+    font-weight: 500;
+}
+
+.order-checkout span{ 
+    color: var(--clr-gold);
+    float: right;
+    font-size: 1.1rem;
+    font-weight: 600;
+}
+
+.order-checkout button{
+    color: white;
+    border: none;
+    border-radius: 4px;
+    background-color: var(--clr-gold);
+    width: 100%;
+    height: 2.5rem;
+    font-size: 1.2rem;
+    font-weight: 500;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.order-checkout button:hover{
+    transition: background-color 0.3s;
+    background-color: var(--clr-gold-focus);
 }
