--- a/styles/checkout.css
+++ b/styles/checkout.css
@@ -3,6 +3,7 @@
 :root{
     --clr-gold: rgb(197, 157, 95);
     --clr-gold-focus: rgb(141, 112, 67);
+    --clr-gold-disabled: rgb(59, 47, 28);
     --clr-background: hsl(210, 36%, 96%);
     --clr-titles: color: hsl(209, 61%, 16%);;
 }
@@ -108,9 +109,9 @@ html, body{
 
 .order-checkout button{
     color: white;
+    background-color: var(--clr-gold);
     border: none;
     border-radius: 4px;
-    background-color: var(--clr-gold);
     width: 100%;
     height: 2.5rem;
     font-size: 1.2rem;
@@ -119,7 +120,15 @@ html, body{
     transition: background-color 0.3s;
 }
 
-.order-checkout button:hover{
+.enabled:hover{
     transition: background-color 0.3s;
     background-color: var(--clr-gold-focus);
 }
+
+.cart-empty{
+    padding: 1rem;
+    text-align: center;
+    line-height: 2rem;
+}
+
+
