--- a/styles/checkout.css
+++ b/styles/checkout.css
@@ -17,12 +17,12 @@ html, body{
 }
 
 .container{
-    border: solid 2px black;
     border-radius: 4px;
     width: 40%;
     margin: 4rem auto;
     letter-spacing: 2px;
     min-width: 600px;
+    background-color: transparent;
 }
 
 .order-items{
@@ -39,6 +39,17 @@ html, body{
     height: 100px;
     border: solid 4px var(--clr-gold);
     border-radius: 4px ;
+}
+
+.order-items input{
+    color: var(--clr-gold);
+    font-weight: 600;
+    font-size: 1.2rem;
+    width: 2.6rem;
+    background-color: transparent;
+    border: solid 2px var(--clr-gold);
+    border-radius: 4px;
+    padding-left: 0.5rem;
 }
 
 .item-info{
@@ -129,6 +140,36 @@ html, body{
     padding: 1rem;
     text-align: center;
     line-height: 2rem;
+}
+
+.hidden{
+    display: none;
+}
+
+
+.order-sent{
+    text-align: center;
+    font-size: 1.5rem;
+}
+
+.footer{
+    position: fixed;
+    bottom: 0;
+    padding: 2rem;
+    background-color: var(--clr-gold);
+    color: white;
+    text-align: center;
+    font-size: 1.4rem;
+    font-weight: 500;
+    width: 100%;
+}
+
+.footer a{
+    color: white;
+}
+
+.footer a:hover{
+    color: rgb(211, 211, 211);
 }
 
 
