--- a/styles/checkout.css
+++ b/styles/checkout.css
@@ -10,7 +10,6 @@
 
 
 html, body{
-    min-height: 100%;
     height: 100%;
     font-family: "Roboto", sans-serif;
     background-color: var(--clr-background);
@@ -23,6 +22,7 @@ html, body{
     letter-spacing: 2px;
     min-width: 600px;
     background-color: transparent;
+    max-width: 600px;
 }
 
 .order-items{
@@ -102,6 +102,8 @@ html, body{
 
 .order-checkout{
     padding: 1rem 2rem;
+    max-width: 600px;
+    margin: auto;
 }
 
 .order-checkout p {
@@ -187,3 +189,47 @@ html, body{
     margin-top: 1rem;
 }
 
+@media only screen and (max-width: 450px) {
+   
+    .container{
+        border-radius: 4px;
+        margin: 0;
+        padding: 1rem;
+        letter-spacing: 2px;
+        min-width: 100%;
+        box-sizing: border-box;
+    }
+
+    .order-items{
+        margin: 1.2rem 0;
+        padding: 0;
+    }
+
+    .order-items img{
+        margin: auto;
+    }
+
+    .order-items p{ 
+        margin-right: 1.4rem;
+    }
+
+    .item-name{
+        padding-top: 0.6rem;
+        padding-bottom: 0.4rem;
+    }
+
+    .item-total{
+        padding-bottom: 0.8rem;
+    }
+
+    .item-quantity{
+        padding-bottom: 0.8rem;
+    }
+
+    .order-checkout{
+        margin: 0;
+        padding: 2rem 0;
+    }
+
+    
+  }
