--- a/styles/checkmark.css
+++ b/styles/checkmark.css
@@ -10,3 +10,11 @@
 .checkmark__check{transform-origin: 50% 50%;stroke-dasharray: 46;stroke-dashoffset: 46;animation: stroke 0.3s cubic-bezier(0.65, 0, 0.45, 1) 0.8s forwards}
 @keyframes stroke{100%{stroke-dashoffset: 0}}@keyframes scale{0%, 100%{transform: none}50%{transform: scale3d(1.1, 1.1, 1)}}
 @keyframes fill{100%{box-shadow: inset 0px 0px 0px 128px #7ac142}}
+
+
+@media only screen and (max-width: 450px) {
+    .wrapper{
+        margin-top: 8rem;
+    }
+        
+  }
